# polygate

./: .env.example  .gitignore  DISCLAIMER.md  LICENSE  README.md  llm.md  pyproject.toml
examples/: sample_agent.py
scripts/: generate_wallet.py
src/polygate/: __init__.py  cli.py  config.py  constants.py  main.py  mcp_server.py  onboarding.py
src/polygate/api/: deps.py  routes_market.py  routes_portfolio.py  routes_system.py  routes_trading.py
src/polygate/cli/: __init__.py  derive_creds.py  env_file.py
src/polygate/core/: __init__.py  auth.py  env_file.py  errors.py  logging.py  sigtype.py
src/polygate/models/: __init__.py  common.py  order.py  portfolio.py
src/polygate/services/: __init__.py  clob_read.py  credentials.py  data_api.py  facade.py  gamma.py  http.py  trading.py  transform.py
tests/: __init__.py  conftest.py  test_auth.py  test_cli_setup.py  test_dryrun.py  test_env_path.py  test_facade.py  test_market_routes.py  test_mcp_server.py  test_models.py  test_setup.py  test_transform.py
