[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polygate"
version = "0.1.0"
description = "A language-agnostic REST gateway to the Polymarket APIs for algorithmic and LLM trading agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.137",
    "uvicorn[standard]>=0.49",
    "httpx>=0.28",
    "pydantic>=2.13",
    "pydantic-settings>=2.14",
    "python-dotenv>=1.2",
    "tenacity>=9.1",
    "eth-account>=0.13",
    "py-clob-client-v2==1.0.1",
    "mcp>=1.27,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.23",
    "respx>=0.23",
]

[project.scripts]
polygate = "polygate.main:run"
polygate-mcp = "polygate.mcp_server:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
